minor warnings fixes